--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
+/* html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
@@ -25,6 +25,53 @@ time, mark, audio, video {
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
+} */
+
+h1 {
+  display: none;
+}
+#speciality {
+  text-transform: uppercase;
+  text-align: center;
+}
+.wrapper-students {
+  width: 80%;
+  margin: auto;
+}
+.wrapper-students .content-student {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin: 0;
+  padding: 10px 20px;
+  position: relative;
+}
+.wrapper-students .content-student:nth-child(odd) {
+  background-color: #d6d6d6;
+}
+.wrapper-students .content-student:after {
+  content: ' ';
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background-color: black;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+.wrapper-students .content-student img,
+.wrapper-students .content-student span {
+  width: calc(100% / 5);
+  padding: 0 10px;
+}
+.wrapper-students .content-student .avatar {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+}
+.wrapper-students .content-student .lastname {
+  text-transform: uppercase;
 }
 
 h1 {
@@ -152,7 +199,6 @@ button {
     font-weight: 900;
     text-transform: uppercase;
 }
-
 .wrap-header {
     background: #780206;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #061161, #780206);  /* Chrome 10-25, Safari 5.1-6 */
@@ -163,11 +209,9 @@ button {
     justify-content: center;
     align-items: center;
 }
-
 .wrap-header * {
     margin: 1.5rem 2rem;
 }
-
 .title {
     text-align: center;
     color: #fff;
@@ -175,19 +219,12 @@ button {
     line-height: 6rem;
     font-weight: 900;
 }
-
 .wrap-content {
     width: 100%;
     padding: 0 10rem;
     display: flex;
     flex-flow: row nowrap;
 }
-
-.avatar {
-    margin-top: -6rem;
-    margin-right: 5rem;
-}
-
 .avatar img {
     width: 20rem;
     max-width: 20rem;
@@ -202,19 +239,50 @@ button {
 .content p {
     margin: 1rem 0;
 }
-
 .wrap-input {
     display: flex;
     flex-flow: column wrap;
     margin: 1rem;
 }
-
 .wrap-input label {
     font-size: 1.4rem;
     font-weight: 900;
     text-transform: uppercase;
 }
-
 .wrap-input input {
     padding: .5rem 2rem;
+}
+.react-tabs__tab-list{
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 80%;
+    margin-top: 30px;
+}
+.react-tabs__tab-list li{
+    text-transform: uppercase;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border:2px solid black;
+    border-bottom:0;
+    background-color:#d6d6d6;
+    padding: 15px 20px;
+    line-height: normal;
+    width:200px;
+    text-align: center;
+    cursor:pointer;
+    outline:none;
+    user-select:none;
+}
+.react-tabs__tab--selected{
+    color: #780206;
+    background-color:white!important;
+}
+.react-tabs__tab-panel{
+    opacity:0;
+    transition: 0.65s all ease-in-out;
+}
+.react-tabs__tab-panel--selected{
+    opacity: 1;
 }
