--- a/style.css
+++ b/style.css
@@ -26,6 +26,53 @@ time, mark, audio, video {
     font: inherit;
     vertical-align: baseline;
 }
+
+h1 {
+  display: none;
+}
+#speciality {
+  text-transform: uppercase;
+  text-align: center;
+}
+.wrapper-students {
+  width: 80%;
+  margin: auto;
+}
+.wrapper-students .content-student {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin: 0;
+  padding: 10px 20px;
+  position: relative;
+}
+.wrapper-students .content-student:nth-child(odd) {
+  background-color: #d6d6d6;
+}
+.wrapper-students .content-student:after {
+  content: ' ';
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background-color: black;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+.wrapper-students .content-student img,
+.wrapper-students .content-student span {
+  width: calc(100% / 5);
+  padding: 0 10px;
+}
+.wrapper-students .content-student .avatar {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+}
+.wrapper-students .content-student .lastname {
+  text-transform: uppercase;
+}
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
