--- a/styles/Chat.css
+++ b/styles/Chat.css
@@ -1,21 +1,23 @@
-html, body, #root, #chat{
+html, body, #root, .chat{
     height: 100%;
 }
 
-#chat{
+.chat{
   background-color: #fff;
   display: flex;
   font-size: 14px;
   min-width: 500px;
 }
 
-#list-conversations{
+.list-conversations{
   flex: 0 0 25%;
   max-width: 420px;
   min-width: 240px;
+  height: 100vh;
+  overflow-y: auto;
 }
 
-#conversation{
+.conversation{
   border-left: 1px solid rgba(0, 0, 0, .20);
   display: flex;
   flex: 3;
