--- a/styles/Contacts.css
+++ b/styles/Contacts.css
@@ -3,16 +3,18 @@
   display: block;
 }
 
-#list-conversations h2 {
+.list-conversations h2 {
   margin: 50px 0;
   text-align: center;
   font-size: 25px;
 }
 
 
-#list-conversations li {
+.list-conversations li {
   display: block;
   width: 100%;
+  transition: background-color 0.25s ease-in-out;
+  cursor: pointer;
 }
 
 .contact-conv {
@@ -21,10 +23,13 @@
   padding: 10px 20px;
 }
 
-#list-conversations img {
+.list-conversations img {
   border-radius: 50%;
   max-width: 50px;
   max-height: 50px;
   margin-right: 10px;
 }
 
+.list-conversations li.active {
+  background-color: #f7f7f7;
+}
